[package]
name = "abcgen"
version = "0.2.0"
edition = "2021"
authors = ["Francesco Buldo <frbuldo@gmail.com>"]
categories = ["rust-patterns"]
description = "A procedural macro to generate boilerplate code for objects implementing the 'Actor' pattern"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frabul/abcgen"
documentation = "https://docs.rs/abcgen"
readme = "README.md"
keywords = [
    "actor",
    "async",
    "runnable",
    "boilerplate",
    "service",
    "code-generation",
    "boilerplate",
    "pattern",
]


exclude = ["TODO"]


[dependencies]
abcgen-attributes = { path = "attributes", version = "0.2.0" }
thiserror = "1.0.64"

[dev-dependencies]
quote = "1.0.37"
syn = { version = "2.0.82", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
ab-code-gen = { path = "code_gen" }

[workspace]
