[package]
name = "ab-code-gen"
version = "0.1.0"
edition = "2021" 
authors = ["Francesco Buldo <frbuldo@gmail.com>"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
description = "Functions to generate boilerplate code for objects implementing the 'Actor' pattern. Used by the abcgen."
documentation = "https://docs.rs/abcgen"
keywords = [
    "actor",  
    "async",
    "generator",
    "macro", 
    "service",
    "code-generation",
    "boilerplate",
    "pattern",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frabul/abcgen"

[dependencies]
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.87"
convert_case = "0.6.0"
