[package]
name = "ab-code-gen"
version = "0.3.2"
edition = "2021"
authors = ["Francesco Buldo <frbuldo@gmail.com>"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
description = "Functions to generate boilerplate code for objects implementing the 'Actor' pattern. Used by the abcgen crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/frabul/abcgen"
documentation = "https://docs.rs/ab-code-gen"
keywords = [
    "actor",
    "async",
    "boilerplate",
    "code-generation",
    "macro", 
]

[dependencies]
syn = { version = "2.0.82", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.87"
convert_case = "0.6.0"
